--- a/src/App.css
+++ b/src/App.css
@@ -5,3 +5,27 @@
 .max-height{
     height: 100%;
 }
+
+.popup {
+    position: fixed;
+    z-index: 1000;
+    padding: 10px;
+    border-radius: .7em;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    background-color: #c6e3fa;
+}
+
+.popup-button {
+    width: max-content;
+    background-color: #6ea9d7;
+    color: white;
+    border: none;
+    border-radius: 8px;
+    padding: 2px 4px;
+}
+
+.close {
+    width: 16px;
+    height: 16px;
+    cursor: pointer;
+}
