--- a/src/App.css
+++ b/src/App.css
@@ -17,8 +17,8 @@
 
 .popup-button {
     width: max-content;
-    background-color: #6ea9d7;
-    color: white;
+    background-color: transparent;
+    color: #6ea9d7;
     border: none;
     border-radius: 8px;
     padding: 2px 4px;
