--- a/src/App.css
+++ b/src/App.css
@@ -23,11 +23,30 @@
     color: #6ea9d7;
     border: none;
     border-radius: 8px;
-    padding: 2px 4px;
+    padding: 2px 16px;
 }
 
 .close {
     width: 16px;
     height: 16px;
     cursor: pointer;
+    margin-bottom: 16px;
+}
+
+.edit-text {
+    box-sizing: border-box;
+  flex-grow: 1;
+  background-color: #c6e3fa;
+  font-family: Helvetica Neue,Segoe UI,Helvetica,Arial,sans-serif;
+  margin: 16px auto;
+  outline: 0;
+  border-radius: 8px;
+  border-top: 0 none;
+  border-right: 0 none;
+  border-bottom: 0 none;
+  border-left: 0 none;
+  overflow: visible;
+  color: rgba(0,0,0,.87);
+  overflow-wrap: anywhere;
+  word-break: break-word;
 }
